# mailbridge

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  mailbridge  mailbridge.service  sonar-project.properties  tset
.github/workflows/: build.yml  publish.yml  release.yml
cmake/: FindBase64.cmake
conf/: configuration.default.json  configuration.json
conf/mqtt/: README.md
conf/slack/: README.md
conf/stdout/: README.md
lib/base64/: base64.hpp
scripts/: increment-version.sh  set-version.sh
src/: mailbridge.cpp  main.cpp
src/configurations/: authentication.h  configuration.cpp  configuration.h  mqtt_configuration.h  slack_configuration.cpp  slack_configuration.h
src/handlers/: handler.h  mqtt_handler.cpp  mqtt_handler.h  slack_handler.cpp  slack_handler.h  stdout_handler.cpp  stdout_handler.h
src/messages/: smtp_message.h
src/servers/: server.cpp  server.h  smtp_server.cpp  smtp_server.h
src/servers/threads/: smtp_thread.cpp  smtp_thread.h
src/util/: arguments.cpp  arguments.h  configuration.cpp  configuration.h  logging_util.cpp  logging_util.h  string_util.cpp  string_util.h
